--- a/css/style.css
+++ b/css/style.css
@@ -1,37 +1,88 @@
-body{
-   background-color: darkgray;
-   padding: 5%;
-   margin: 5%;
+body {
+	background-color: darkgray;
+	padding: 5%;
+	margin: 5%;
+}
+
+header {
+	background-color: darkred;
+}
+.logo {
+	width: 200px;
+	height: 60px;
+}
+.box .box {
+	width: 300px;
+	height: 150;
+	padding: 20px;
+	margin: 100px auto;
+}
+
+.menu_header {
+	float: right;
+	padding: 1%;
+	margin: 1%;
+}
+
+.menu_header a {
+	padding: 0px 10px;
+	word-wrap: normal;
+	display: inline-block;
+	color: slategrey;
+	font-size: 30px;
+	text-decoration: none;
+}
+
+#results {
+	border-collapse: collapse;
+}
+
+td {
+	border: 1px solid black;
+	padding: 2px;
 }
 
 
-header{
-    background-color:darkred;
+.seattle-paragraph{
+	font-size: 30px;
+	font-family: 'Courier New', Courier, monospace;
+	text-align: center;
+	color: brown;
 }
-.logo{
-    width: 200px;
-    height: 60px;
-}
-.box
-.box{
-    width: 300px;
-    height: 150;
-    padding: 20px;
-    margin: 100px auto;
-}
+.box1 {
+	padding: 10px; 
+	display: inline-block;
+	float: left;
+  }
 
-.menu_header{
-    float: right;
-    padding: 1%;
-    margin: 1%;
-}
+.box2 {
+	padding: 10px; 
+	display: inline-block;
+	float: none;
+  }
 
-.menu_header a{
-    
-  padding: 0px 10px;
-  word-wrap: normal;
-  display: inline-block;
-  color: slategrey;
-  font-size: 30px;
-  text-decoration: none;
-}
+.box3{
+		
+		display: inline-block;
+		float: right;
+	}
+.box4 {
+		padding: 5px; 
+		display: inline-block;
+		float: left;
+	  }
+	
+	
+	
+.box5 {
+		padding: 5px; 
+		display: inline-block;
+		float: none;
+	  }
+	
+.box6{
+		padding: 10px; 
+		display: inline-block;
+		float: right;
+	}
+	
